--- a/README
+++ b/README
@@ -1,14 +1,7 @@
-{\rtf1\ansi\ansicpg1252\cocoartf1265\cocoasubrtf210
-{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-\paperw11900\paperh16840\margl1440\margr1440\vieww10800\viewh8400\viewkind0
-\pard\tx566\tx1133\tx1700\tx2267\tx2834\tx3401\tx3968\tx4535\tx5102\tx5669\tx6236\tx6803\pardirnatural
+Footscray Maker Lab
+Access system
 
-\f0\fs24 \cf0 Footscray Maker Lab\
-Access system\
-\
-We\'92re just in the process of building and installing the rfid door lock system. \
-\
-Eventually we plan to have tools, lockers, and other resources use RFID reading, and to implement pay-to-use plans, and track your experience with tools to build upon your maker profile. \
-\
-}
+We’re just in the process of building and installing the rfid door lock system. 
+
+Eventually we plan to have tools, lockers, and other resources use RFID reading, and to implement pay-to-use plans, and track your experience with tools to build upon your maker profile. 
+
